# cs8803-hml

./: README.md
lab-1a/lab1A-5/__MACOSX/: ._lab1A
lab-1a/lab1A-5/lab1A/: analye_model.py  lab1A.ipynb  operator_base.py  operators.py  plot_rooflines.py
lab-1b/Lab1B/Lab1B/: analye_model.py  lab1A.ipynb  lab1B.ipynb  operator_base.py  operators.py  output_a1.csv  output_a2.csv  output_a3i.csv  output_a3ii.csv  output_a4i.csv  output_a4ii.csv  output_b1.csv  output_b2.csv  output_b3a.csv  output_b3b.csv  output_b3c.csv  output_b4a.csv  output_b4b.csv  output_b4c.csv  output_b5a.csv  output_b5b.csv  output_b5c.csv
lab-1b/Lab1B/__MACOSX/: ._Lab1B
lab-3a/lab3A/: analysis.py  gpt3_27_1_layer.json  model.py  nodes.csv  partA.ipynb
lab-3bc/: answer.xlsx  discussion.txt
lab-3bc/lab3B/: partB.ipynb
lab-3bc/lab3B/megatron_configs/: data_parallel.yaml  data_parallel_w_activ_recomp.yaml  (+5 more)
lab-4/lab4a/: lab4a.ipynb  llm_mlp  llm_mlp_ar
lab-4/lab4b/: example_output.stdout  lab4b.ipynb
lab-4/lab4b/part1/: CMakeLists.txt  run.sh
lab-4/lab4b/part1/include/astra-network-analytical/common/: Event.h  EventList.h  EventQueue.h  NetworkFunction.h  Type.h
lab-4/lab4b/part1/include/astra-network-analytical/network/: Chunk.h  Device.h  Link.h
lab-4/lab4b/part1/include/astra-network-analytical/topology/: BasicTopology.h  FullyConnected.h  Mesh2D.h  Ring.h  Switch.h  Topology.h
lab-4/lab4b/part1/src/: main.cpp
lab-4/lab4b/part1/src/common/: NetworkFunction.cpp
lab-4/lab4b/part1/src/common/event-queue/: Event.cpp  EventList.cpp  EventQueue.cpp
lab-4/lab4b/part1/src/network/: Chunk.cpp  Device.cpp  Link.cpp
lab-4/lab4b/part1/src/topology/: BasicTopology.cpp  FullyConnected.cpp  Mesh2D.cpp  Ring.cpp  Switch.cpp  Topology.cpp
(+94 files in other folders)
